Bug 1047107 - Make CDMProxy Close() its GMPDecryptorProxy on Shutdown. r=ehsan